# DeSDI

./: .clang-format  .cursorrules  .gitignore  .gitlab-ci.yml  AGENTS.md  GEMINI.md  Makefile  README.md  pyproject.toml
docs/: DEVGRANT.md  DEV_GRANT_TEMPLATE.md  PROPGF.md  REF.md
docs/planning/: milestone_1_core_ingestion.md  milestone_2_fvm_registry.md  milestone_3_compute_bridge.md
parser/: CMakeLists.txt
parser/include/desdi/: cubed_sphere.hpp  geo_point.hpp  hilbert_curve.hpp  hilbert_sharder.hpp
parser/src/: main.cpp
parser/tests/: CMakeLists.txt  test_cubed_sphere.cpp  test_geo_point.cpp  test_hilbert_curve.cpp  test_hilbert_sharder.cpp
